Fix el-select viewport overflow

--- a/css/compiled.css
+++ b/css/compiled.css
@@ -1,4 +1,4 @@
-*{box-sizing:border-box}html,body{height:100%;margin:0;padding:0}
+*{box-sizing:border-box}html,body{height:100%;margin:0;padding:0}.el-select-dropdown__item{max-width:100vw}
 
 .spec-edit-spec-modal>.el-dialog>.el-dialog__body>*+*{margin-top:20px}.spec-edit-spec-modal>.el-dialog>.el-dialog__body>label{display:block}.spec-edit-spec-modal>.el-dialog>.el-dialog__body>label input,.spec-edit-spec-modal>.el-dialog>.el-dialog__body>label textarea{display:block;width:100%}
 
